syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "ProductProto";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProductById(GetProductRequest) returns (ProductResponse);
  rpc GetAllProducts(Empty) returns (ProductsResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (Empty);
}

message Product {
  int64 id = 1;
  string name = 2;
  double price = 3;
}

message CreateProductRequest {
  string name = 1;
  double price = 2;
}

message GetProductRequest {
  int64 id = 1;
}

message UpdateProductRequest {
  int64 id = 1;
  string name = 2;
  double price = 3;
}

message DeleteProductRequest {
  int64 id = 1;
}

message ProductResponse {
  Product product = 1;
}

message ProductsResponse {
  repeated Product products = 1;
}

message Empty {}
